f4-redirect/customers-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: customers-route
spec:
  hosts:
    - customers.default.svc.cluster.local
  http:
    - match:
        - uri:
            exact: /hello
      redirect:
        uri: /v1/hello
        authority: hello-world.default.svc.cluster.local
    - route:
        - destination:
            host: customers.default.svc.cluster.local
            port:
              number: 80
            subset: v1
